Implementação fluxo finalizar compra

--- a/app/src/main/res/layout/fluxo_pagamento_activity.xml
+++ b/app/src/main/res/layout/fluxo_pagamento_activity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.PagamentoActivity">
+    tools:context=".activities.FluxoPagamentoActivity">
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragmentContainerView3"
@@ -15,5 +15,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:navGraph="@navigation/pagamento__nav_graph"/>
+        app:navGraph="@navigation/pagamento_nav_graph"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
