--- a/app/src/main/res/layout/finalizar_compras_fragment.xml
+++ b/app/src/main/res/layout/finalizar_compras_fragment.xml
@@ -52,13 +52,14 @@
 
         <TextView
             android:id="@+id/textView10"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="16dp"
             android:fontFamily="@font/poppins"
             android:text="Compra finalizada com sucesso"
+            android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="24sp"
             android:textStyle="bold"
@@ -70,7 +71,7 @@
             android:id="@+id/textView11"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="44dp"
+            android:layout_marginTop="32dp"
             android:fontFamily="@font/poppins"
             android:text="Agradecemos pela preferência!"
             android:textAlignment="center"
@@ -84,7 +85,7 @@
             android:id="@+id/textView8"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="32dp"
             android:fontFamily="@font/poppins"
             android:text="OnShop, fique ligado em suas compras."
             android:textAlignment="center"
