--- a/app/src/main/res/layout/pagamento_fragment.xml
+++ b/app/src/main/res/layout/pagamento_fragment.xml
@@ -90,7 +90,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/cadastro_campo_confirmar_senha"
+        android:id="@+id/campo_pagamento_cep"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
@@ -100,7 +100,7 @@
         app:layout_constraintTop_toBottomOf="@+id/campo_pagamento_numero">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/campo_senha_confirmar_cadastro"
+            android:id="@+id/pagamento_campo_cep"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:backgroundTint="#FFFFFF"
@@ -120,7 +120,7 @@
         android:hint="Número do cartão"
         app:layout_constraintEnd_toEndOf="@+id/campo_pagamento_numero"
         app:layout_constraintStart_toStartOf="@+id/campo_pagamento_numero"
-        app:layout_constraintTop_toBottomOf="@+id/cadastro_campo_confirmar_senha">
+        app:layout_constraintTop_toBottomOf="@+id/campo_pagamento_cep">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/cadastro_campo_cartao_numero"
@@ -151,7 +151,7 @@
             android:layout_height="60dp"
             android:backgroundTint="#FFFFFF"
             android:fontFamily="@font/poppins"
-            android:inputType="number"
+            android:inputType="date"
             android:textSize="18sp">
 
         </com.google.android.material.textfield.TextInputEditText>
@@ -192,9 +192,9 @@
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/cadastro_campo_confirmar_senha"
+        app:layout_constraintEnd_toEndOf="@+id/campo_pagamento_cep"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="@+id/cadastro_campo_confirmar_senha"
+        app:layout_constraintStart_toStartOf="@+id/campo_pagamento_cep"
         app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
     <TextView
@@ -221,5 +221,17 @@
         app:layout_constraintBottom_toBottomOf="@+id/textView13"
         app:layout_constraintEnd_toEndOf="@+id/cadastro_campo_numero_cartao_cvv"
         app:layout_constraintTop_toTopOf="@+id/textView13" />
+
+    <ProgressBar
+        android:id="@+id/loading_pagamento"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/bt_efetuar_pagamento"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cadastro_campo_numero_cartao_cvv"
+        tools:visibility="gone" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
