--- a/app/src/main/res/layout/carrinho_fragment.xml
+++ b/app/src/main/res/layout/carrinho_fragment.xml
@@ -123,6 +123,7 @@
         android:layout_height="0dp"
         android:background="@color/whiteOnShop"
         android:visibility="gone"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="@+id/constraintLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
